forNubes/operator/manifests/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: terra
  labels:
    name: terra
