forNubes/operator/manifests/patch-registry-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry-server
  namespace: terra
spec:
  template:
    spec:
      initContainers: []
      volumes: []
      containers:
      - name: registry-server
        image: naeel/terraform-registry-server:docs-dev
        imagePullPolicy: Always
        command: ["/app/registry-server"]
        volumeMounts: []
